fixed bug where required letter wouldn't click on mobile

--- a/src/answers/answers.css
+++ b/src/answers/answers.css
@@ -1,59 +1,15 @@
 .answers {
-  column-count: 3 !important;
-}
-.modal-container {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  opacity: 0;
-  transition: opacity 0.2s ease;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: rgba(0, 0, 0, 0.3);
-  pointer-events: none;
-  z-index: 1;
-}
-.modal-container.active {
-  opacity: 1;
-  pointer-events: all;
-  z-index: 2;
+  column-count: auto;
+  height: 100%;
 }
 
-.modal {
-  position: relative;
-  padding: 5%;
-  width: 500px;
-  max-width: 500px;
-  max-height: 350px;
-  background-color: white;
+.answers--li {
+  display: inline-block;
+  width: 20%;
 }
+
 .close {
   position: absolute;
   top: 0;
   right: 0;
-}
-
-.answers-container {
-  overflow-y: auto;
-  max-height: 350px;
-  width: 500px;
-}
-
-.answers-container::-webkit-scrollbar {
-  width: 0.5rem;
-}
-
-.answers-container::-webkit-scrollbar-track {
-  background-color: transparent;
-}
-
-.answers-container::-webkit-scrollbar-thumb {
-  background-color: transparent;
-  border-radius: 5px;
-}
-.modal:hover .answers-container::-webkit-scrollbar-thumb {
-  background-color: darkgrey;
 }
